<resources>
    <string name="app_name">Diploma</string>
    <string name="date_example">Select dates</string>
    <string name="filter_example">1 room | 2 adults | No children</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="confirm">Confirm</string>
    <string name="rooms">Rooms</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="search">Search</string>
    <string name="search1">Search</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="filter">Filter</string>
    <string name="lviv">Lviv</string>
    <string name="find">Find</string>
    <string name="your_best">Your Best</string>
    <string name="hotel">Hotel.</string>
    <string name="most_popular">Most popular</string>
    <string name="search_results">Search Results</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="lviv_central_hotel">Lviv central hotel</string>
    <string name="stepna_2">Stepna, 2</string>
    <string name="_70">$70</string>
    <string name="_2_beds">2 beds</string>
    <string name="daiwa_roynet_hotel">Daiwa Roynet Hotel</string>
    <string name="tokyo">Tokyo</string>
    <string name="the_center_of_lviv">The center of Lviv</string>
    <string name="lviv_lviv_region_ukraine">Lviv, Lviv region Ukraine</string>
    <string name="_2_960_properties">2,960 properties</string>
    <string name="saved">Saved</string>
    <string name="account">Account</string>
    <string name="favorite">Favorite</string>
    <string name="mandarin_hotel">Mandarin hotel</string>
    <string name="register">Don\'t have an account?\n Click here to register</string>
    <string name="log_in">Log in</string>
    <string name="account_login">Account Login</string>
    <string name="home">Home</string>
</resources>